# slowly-unhinged

./: .goosehints  README.md  architecture.md  plan.md
companion-app/: README.md  index.html  package-lock.json  package.json
companion-app/src/: main.ts  styles.css
companion-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
companion-app/src-tauri/src/: docker.rs  lib.rs  main.rs  web_server.rs
docs/: index.html
hub/: Dockerfile  index.js  package-lock.json  package.json  zoom_app.html  zoom_app.js
